# learning-langchain-101

./: ReadMe.md  pyproject.toml  starter.py
chains/: 1_chain.py  2_chain_explore.py  3_chain_exploring.py  4_chains_paralel.py  5_chain_parallel.py  6_chain_parallel.py  7_chain_branch.py
chat-models/: 1_chat_mode.py  2_conversation_chat_model.py  3_full_conversation_chat_model.py
prompt-template/: 1_prompt_template.py  ReadMe.md
rag_lang_chain_v.3/: 1_eg_langchain.py  1_langchain.py  2_langchain_json_splitter.py  3_rag_fiass_llm.py  example.py  sample.json  starter_rag.py
rag_lang_chain_v.3/faiss_index/: index.faiss  index.pkl
